Implemented widget update

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,17 +29,6 @@
         android:roundIcon="@mipmap/logo_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MedTimer">
-        <receiver
-            android:name=".widgets.NextRemindersWidget"
-            android:exported="false">
-            <intent-filter>
-                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
-            </intent-filter>
-
-            <meta-data
-                android:name="android.appwidget.provider"
-                android:resource="@xml/next_reminders_widget_info" />
-        </receiver>
 
         <service
             android:name=".ReminderSchedulerService"
@@ -98,6 +87,27 @@
             android:name="androidx.startup.InitializationProvider"
             android:authorities="${applicationId}.androidx-startup"
             tools:node="remove" />
+
+        <receiver
+            android:name=".widgets.NextRemindersWidgetProvider"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/next_reminders_widget_info" />
+        </receiver>
+        <receiver
+            android:name=".widgets.NextRemindersWidgetUpdateReceiver"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.futsch1.medtimer.NEXT_REMINDER_WIDGET_UPDATE" />
+            </intent-filter>
+
+        </receiver>
+
     </application>
 
 </manifest>
