--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,13 +25,7 @@ jobs:
           cache: gradle
 
       - uses: gradle/actions/setup-gradle@0bdd871935719febd78681f197cd39af5b6e16a6 # v4.2.2
-        with:
-          dependency-graph: generate-and-submit
 
-      - name: Run fuzzing tests
-        run: ./gradlew test -Dfuzzing=true
-      - name: Android lint
-        run: ./gradlew lint
       - name: Enable KVM group perms
         run: |
           echo 'KERNEL=="kvm", GROUP="kvm", MODE="0666", OPTIONS+="static_node=kvm"' | sudo tee /etc/udev/rules.d/99-kvm4all.rules
@@ -70,6 +64,11 @@ jobs:
           profile: Pixel5
           script: ./gradlew JacocoDebugCodeCoverage --stacktrace
           cores: 4
+
+      - name: Run fuzzing tests
+        run: ./gradlew testDebug -Dfuzzing=true
+      - name: Android lint
+        run: ./gradlew lint
 
       - name: SonarQube
         env:
