384 improve test actions (#387)
* Enable combined code coverage of AndroidTest and UnitTest

* Test simplification and fixes

* Restructured GitHub actions

* Action fixes

* Try with API level 33

* Try with API level 33

* Try fixing emulator

* Increase test stability

* Test fixes

* Fix new reminder dialog window size

* Use google_apis target

* Fix dialog padding

* Test stability fixes

* Test stability fixes

* Test stability fixes

* Test stability fixes

* Test stability fixes

* Test stability fixes

* Improvements for new reminder dialog

* Actions optimizations

* Test stability fixes

* Test stability fixes

* Test stability fixes

* Disabled the one test that does not work on GitHub Android emulator

* Re-enabled tests

* Added a further delay

* Fix CodeQL workflow

* Calculate expected reminder positions in list

* Test stability fix

* Stacktrace for test task

* Fix CodeQL

* Improve test stability

* Try to fix duplicate class issue

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Android CI
+name: Build
 
 on:
   workflow_dispatch:
@@ -28,34 +28,7 @@ jobs:
       - uses: gradle/actions/setup-gradle@0bdd871935719febd78681f197cd39af5b6e16a6 # v4.2.2
         with:
           dependency-graph: generate-and-submit
-      - name: Grant execute permission for gradlew
-        run: chmod +x gradlew
-      - name: Cache SonarCloud packages
-        uses: actions/cache@1bd1e32a3bdc45362d1e726936510720a7c30a57 # v4.2.0
-        with:
-          path: ~/.sonar/cache
-          key: ${{ runner.os }}-sonar
-          restore-keys: ${{ runner.os }}-sonar
-      - name: Cache Gradle packages
-        uses: actions/cache@1bd1e32a3bdc45362d1e726936510720a7c30a57 # v4.2.0
-        with:
-          path: ~/.gradle/caches
-          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle') }}
-          restore-keys: ${{ runner.os }}-gradle
-      - name: Run unit tests
-        run: ./gradlew test createDebugCoverageReport
-      - name: Run fuzzing tests
-        run: ./gradlew test -Dfuzzing=true
-      - name: Android lint
-        run: ./gradlew lint
-      - name: Build
-        run: ./gradlew build
-      - name: Analyze
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        if: ${{ env.SONAR_TOKEN != '' }}
-        run: ./gradlew sonar
+
       - name: Release bundle
         run: ./gradlew bundleRelease
 
