--- a/.github/workflows/compatibilityTest.yml
+++ b/.github/workflows/compatibilityTest.yml
@@ -14,7 +14,7 @@ jobs:
     permissions: write-all
     strategy:
       matrix:
-        api-level: [ 33, 35 ]
+        api-level: [ 28, 33, 35 ]
     steps:
       - name: Set up JDK 17
         uses: actions/setup-java@v4
