--- a/.github/workflows/compatibilityTest.yml
+++ b/.github/workflows/compatibilityTest.yml
@@ -16,6 +16,7 @@ jobs:
       matrix:
         api-level: [ 28, 33, 35 ]
     steps:
+      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
       - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
