--- a/.github/workflows/compatibilityTest.yml
+++ b/.github/workflows/compatibilityTest.yml
@@ -29,15 +29,6 @@ jobs:
           sudo udevadm control --reload-rules
           sudo udevadm trigger --name-match=kvm
 
-      - name: Determine emulator target
-        id: determine-target
-        run: |
-          TARGET="google_apis"
-          if [[ ${{ matrix.api-level }} -ge 34 ]]; then
-            TARGET="aosp_atd"
-          fi
-          echo "TARGET=$TARGET" >> $GITHUB_OUTPUT
-
       - name: AVD cache
         uses: actions/cache@v4
         id: avd-cache
@@ -52,7 +43,7 @@ jobs:
         uses: reactivecircus/android-emulator-runner@v2
         with:
           api-level: ${{ matrix.api-level }}
-          target: ${{ steps.determine-target.outputs.TARGET }}
+          target: google_apis
           arch: x86_64
           force-avd-creation: false
           emulator-options: -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim -camera-back none
