No longer show stacktrace

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -56,7 +56,7 @@ jobs:
           emulator-options: -no-snapshot-save -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim -camera-back none
           disable-animations: true
           profile: Pixel5
-          script: ./gradlew JacocoDebugCodeCoverage --stacktrace
+          script: ./gradlew JacocoDebugCodeCoverage
           cores: 4
 
       - name: Run fuzzing tests
