--- a/.github/workflows/compatibilityTest.yml
+++ b/.github/workflows/compatibilityTest.yml
@@ -37,7 +37,7 @@ jobs:
           path: |
             ~/.android/avd/*
             ~/.android/adb*
-          key: avd-ubuntu-${{ matrix.api-level }}
+          key: avd-${{ matrix.api-level }}
 
       - name: Create AVD and generate snapshot for caching
         if: steps.avd-cache.outputs.cache-hit != 'true'
@@ -62,7 +62,6 @@ jobs:
           disable-animations: true
           profile: ${{ matrix.profile }}
           script: ./gradlew connectedCheck
-          cores: 4
 
       - uses: actions/upload-artifact@v4
         if: always()
