Always start tests at a certain time Register some idling resources with Espresso to improve stability

--- a/.github/workflows/compatibilityTest.yml
+++ b/.github/workflows/compatibilityTest.yml
@@ -61,7 +61,10 @@ jobs:
           emulator-options: -no-snapshot-save -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim -camera-back none
           disable-animations: true
           profile: ${{ matrix.profile }}
-          script: ./gradlew connectedCheck
+          script: |
+            adb shell su 0 date 01012100
+            ./gradlew JacocoDebugCodeCoverage
+            ./gradlew connectedCheck
           cores: 4
 
       - uses: actions/upload-artifact@v4
