--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -55,11 +55,11 @@ jobs:
           force-avd-creation: false
           emulator-options: -no-snapshot-save -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim -camera-back none
           disable-animations: true
-          profile: MediumPhone
+          profile: pixel
           script: |
             adb shell su 0 date 01012100
-            EXIT_CODE=0
-            ./gradlew JacocoDebugCodeCoverage || EXIT_CODE=$? 
+            export EXIT_CODE=0
+            ./gradlew JacocoDebugCodeCoverage || export EXIT_CODE=$? 
             adb pull /sdcard/googletest/test_outputfiles app/build/outputs/androidTest-results/ || true
             echo $EXIT_CODE
             exit $EXIT_CODE
