--- a/.github/workflows/compatibilityTest.yml
+++ b/.github/workflows/compatibilityTest.yml
@@ -14,7 +14,7 @@ jobs:
       fail-fast: false
       matrix:
         api-level: [ 26, 34 ]
-        profile: [ pixel, MediumTablet ]
+        profile: [ medium_phone, medium_tablet ]
     steps:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
       - name: Set up JDK 17
