--- a/.github/workflows/compatibilityTest.yml
+++ b/.github/workflows/compatibilityTest.yml
@@ -64,6 +64,8 @@ jobs:
           disable-animations: true
           script: |
             adb shell su 0 date 01012100
+            ./gradlew packageDebug
+            adb shell input keyevent 3
             adb shell rm /sdcard/googletest/test_outputfiles/* || true
             EXIT_CODE=0 && ./gradlew connectedCheck || EXIT_CODE=$? && (adb pull /sdcard/googletest/test_outputfiles app/build/outputs/androidTest-results/ || true) && exit $EXIT_CODE
           cores: 4
