--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,7 @@
         android:name="android.permission.ACCESS_NETWORK_STATE"
         tools:node="remove" />
     <uses-permission android:name="com.futsch1.medtimer.NOTIFICATION_PROCESSED" />
+    <uses-permission android:name="android.permission.ACCESS_NOTIFICATION_POLICY" />
 
     <application
         android:allowBackup="false"
