Add three vital test steps to build on pull requests

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,6 +3,8 @@ name: Build
 on:
   workflow_dispatch:
   push:
+  pull_request:
+    branches: [ "main" ]
 
 env:
   APK_RELEASE_DIRECTORY: app/build/outputs/apk/release
