Do not run these tests twice in a pr

--- a/.github/workflows/monkeyTest.yml
+++ b/.github/workflows/monkeyTest.yml
@@ -10,7 +10,8 @@ permissions:
   contents: read
 
 jobs:
-  test:
+  monkey-test:
+    if: github.event_name == 'push' || (github.event_name == 'pull_request' && github.event.pull_request.head.repo.full_name != github.repository)
     runs-on: ubuntu-latest
     env:
       target_api_level: 35
