--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -81,7 +81,7 @@ jobs:
 
       - uses: qltysh/qlty-action/coverage@v1
         with:
-          token: {{secrets.QLTY_COVERAGE_TOKEN}}
+          token: ${{ secrets.QLTY_COVERAGE_TOKEN }}
           files: build/reports/jacoco/JacocoDebugCodeCoverage/JacocoDebugCodeCoverage.xml
 
       - name: SonarQube
