--- a/tests.yml
+++ b/tests.yml
@@ -5,9 +5,9 @@ medium-phone-arm:
   device:
     - model: MediumPhone.arm
       version: 34
-      locale: 'en'
+      locale: "en"
       orientation: portrait
     - model: MediumTablet.arm
       version: 34
-      locale: 'de'
+      locale: "de"
       orientation: landscape
