--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,14 +5,14 @@
 
 version: 2
 updates:
-  - package-ecosystem: "gradle" # See documentation for possible values
-    directory: "/" # Location of package manifests
+  - package-ecosystem: gradle # See documentation for possible values
+    directory: / # Location of package manifests
     schedule:
-      interval: "weekly"
-  - package-ecosystem: "gradle" # See documentation for possible values
-    directory: "/app" # Location of package manifests
+      interval: weekly
+  - package-ecosystem: gradle # See documentation for possible values
+    directory: /app # Location of package manifests
     schedule:
-      interval: "weekly"
+      interval: weekly
 
   - package-ecosystem: github-actions
     directory: /
