--- a/.github/workflows/firebaseTest.yml
+++ b/.github/workflows/firebaseTest.yml
@@ -17,7 +17,7 @@ jobs:
         uses: actions/setup-java@c5195efecf7bdfc987ee8bae7a71cb8b11521c00 # v4.7.1
         with:
           java-version: "17"
-          distribution: "temurin"
+          distribution: temurin
           cache: gradle
       - uses: gradle/actions/setup-gradle@8379f6a1328ee0e06e2bb424dadb7b159856a326 # v4.4.0
 
@@ -25,11 +25,11 @@ jobs:
         run: ./gradlew assembleDebug
       - name: Build tests with gradle
         run: ./gradlew assembleDebugAndroidTest
-      - id: "auth"
+      - id: auth
         uses: google-github-actions/auth@ba79af03959ebeac9769e648f473a284504d9193 # v2.1.10
         with:
           credentials_json: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_MEDTIMER_60CC6 }}
-      - name: "Set up Cloud SDK"
+      - name: Set up Cloud SDK
         uses: google-github-actions/setup-gcloud@77e7a554d41e2ee56fc945c52dfd3f33d12def9a # v2.1.4
         with:
           version: ">= 363.0.0"
