--- a/.github/workflows/compatibilityTest.yml
+++ b/.github/workflows/compatibilityTest.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
   pull_request:
   push:
-    branches: [main]
+    branches: [ main ]
 
 permissions:
   contents: read
@@ -16,8 +16,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        api-level: [28, 35]
-        profile: [medium_phone, medium_tablet]
+        api-level: [ 28, 35 ]
+        profile: [ medium_phone, medium_tablet ]
     steps:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
       - name: Set up JDK 17
@@ -68,6 +68,7 @@ jobs:
           script: |
             adb shell settings put global auto_time 0
             adb shell su 0 date 01012100
+            adb uninstall com.futsch1.medtimer || true
             ./gradlew packageDebug
             adb shell input keyevent 3
             adb shell settings put secure long_press_timeout 1500
